assets/css/style.css
/* ... */
.update-info-iner p {
    color: #000;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 1.7;
    margin: 0;
    padding: 6px 0;
}
.ywnupdate-img1 img {
    width: 100%;
    border-radius: 15px;
}
.itemFooter .itemFooter-col {
    display: flex;
    align-items: center;
    padding: 16px 2%;
    flex: 0 0 20%;
    text-align: center;
    justify-content: center;
}
.itemFooter .itemFooter-col img {
    width: 20px;
}
.itemFooter .itemFooter-col p {
    margin: 0;
    color: #7C7C7C;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    padding-left: 5px;
}
.update-info-iner .dotss span {
    display: inline-block;
    width: 4px;
    height: 4px;
    background: #585656;
    border-radius: 100%;
    margin: 0 0px;
}
.update-info-iner .dotss {
    cursor: pointer;
}
.fresh-update-slider .slick-list.draggable {
    padding-right: 250px;
    padding-bottom: 40px;
}
section.community-sec {
    background: #1de0ff;
    padding: 100px 0;
}
section.community-sec .secTitle p, section.community-sec .secTitle h2 {
    text-align: left;
    padding: 9px 0;
}
.stackSpan-wrap img.cursiveArrow {
    position: absolute;
    right: -118px;
    top: -29px;
    width: 74px;
}


section.our-partners-sec {
    padding: 80px 0;
}
.secTitle.centerText{
    text-align: center;
}
.secTitle.centerText p {
    padding: 10px;
    text-align: center;
}
.secTitle.centerText h2 {
    text-align: center;
    font-size: 88px;
}
.secTitle.TextLeft{
    text-align: left;
}
.secTitle.TextLeft p {
    padding: 10px;
    text-align: left;
}
.secTitle.TextLeft h2 {
    text-align: left;
    font-size: 88px;
}
.PartnerItem {
    background: #F8F8F8;
    border-radius: 28px;
    padding: 24px;
}
.PartnerItem .partner-img img {
    width: 100%;
}
.PartnerItem .partner-info h4 {
    margin: 0;
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 26px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%;
    padding: 14px 0;
}
.partner-social-link {
    display: flex;
    align-items: center;
    gap: 8px;
}
.partner-social-link a {
    background: #fff;
    flex: 40px;
    border-radius: 10px;
    padding: 6px;
    text-align: center;
    display: block;
    max-width: 40px;
    height: 40px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}
.partner-social-link a img {
    margin: 0 auto;
    display: block;
    height: 13px;
}
.partnerSlideCol {
    padding: 0 16px;
}
.partner-slider {
    width: 100%;
    margin: 0 auto;
}
/* .partner-slider .slick-center .PartnerItem {
    background: #94B8FF;
} */
/* .partner-slider .slick-center {
    transform: scale(1.4);
} */
.partner-slider .slick-list.draggable {
    padding: 110px 0 !important;
}
.partner-slider ul.slick-dots li, .meet-mind-slider ul.slick-dots li, .fresh-update-slider ul.slick-dots li{
    list-style: none;
    padding: 0;
    font-size: 0;
    margin: 0 4px;
}

.partner-slider ul.slick-dots, .meet-mind-slider ul.slick-dots, .fresh-update-slider ul.slick-dots{
    margin: 0;
    padding: 0;
    display: flex !important;
    align-items: center;
    justify-content: center;
}
.partner-slider ul.slick-dots li button, .meet-mind-slider ul.slick-dots li button, .fresh-update-slider ul.slick-dots li button{
    display: none;
}
.partner-slider ul.slick-dots li, .meet-mind-slider ul.slick-dots li, .fresh-update-slider ul.slick-dots li {
    width: 8px;
    height: 8px;
    background: #EBEAEA;
    border-radius: 100%;
    cursor: pointer;
}
.partner-slider ul.slick-dots li.slick-active, .meet-mind-slider ul.slick-dots li.slick-active, .fresh-update-slider ul.slick-dots li.slick-active {
    background: #161616;
    width: 12px;
    height: 12px;
}
.partner-slider .control-c.slick-arrow, .meet-mind-slider .control-c.slick-arrow, .fresh-update-slider .control-c.slick-arrow {
    cursor: pointer;
    z-index: 3;
    position: absolute;
    bottom: -13px;
    background: #EBEAEA;
    display: flex;
    width: 80px;
    height: 40px;
    padding: 6px;
    border-radius: 20px;
    text-align: center;
    align-items: center;
}
.partner-slider .control-c.slick-arrow, .meet-mind-slider .control-c.slick-arrow, .fresh-update-slider .control-c.slick-arrow{
    padding: 13px;
}

.partner-slider .control-c.a-right, .meet-mind-slider .control-c.a-right, .fresh-update-slider .control-c.a-right {
    right: 38%;
}
.partner-slider .control-c.a-left, .meet-mind-slider .control-c.a-left, .fresh-update-slider .control-c.a-left{
    left: 38%;
}
.partner-slider .control-c.slick-arrow:hover, .meet-mind-slider .control-c.slick-arrow:hover, .fresh-update-slider .control-c.slick-arrow:hover{
    background: #000;
}
.partner-slider .control-c.slick-arrow img, .meet-mind-slider .control-c.slick-arrow img, .fresh-update-slider .control-c.slick-arrow img{
    margin: 0 auto;
    width: 16px;
}
.partner-slider .control-c.slick-arrow:hover img, .meet-mind-slider .control-c.slick-arrow:hover img, .fresh-update-slider .control-c.slick-arrow:hover img{
    filter: contrast(0);
}
.getYown-img video,
.getYown-img img {
    width: 100%;
    display: block !important;
}
.pT-40{
    padding-top: 40px;
}
section.getyour-sec {
    background: #03c5fd;
    padding: 90px 0;
    position: relative;
    min-height: 50vw;
    display: flex;
    align-content: center;
}

section.getyour-sec .getyour-sec-video {
    position: absolute;
    top: 0;
    left: auto;
    right: 0;
    height: 100%;
    max-width: 50%;
}

@media screen and (max-width: 767px) {
    section.getyour-sec {
        display: block;
        padding-bottom: 0;
    }
    section.getyour-sec .getyour-sec-video {
        max-width: 100%;
        position: relative;
        height: auto;
    }
}

section.getyour-sec .secTitle.TextLeft {
    /*padding-bottom: 70px;*/
}
/* .colItem {
    padding: 15px;
} */
/* ... */

